--- a/ads/ads.html
+++ b/ads/ads.html
@@ -185,6 +185,9 @@
       </div>
     </div>
   </div>
+  <footer>
+    <p>Website made by Isen Liu, &copy; 2024</p>
+  </footer>
   <script src="ads.js"></script>
 </body>
 
