--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Isen Liu Portfolio</h1>
     </header>
     <div class="welcomeText">
-      <p>Welcome to my simple portfolio website, made with simple HTML5, CSS, Javascript (no framework).
+      <p>Welcome to my simple portfolio website, made by me with simple HTML5, CSS, Javascript (no framework).
       </p>
       <p>Here are some of the projects I have worked on:</p>
       <a href="./ads/ads.html" class="adsBtn btnHover">HTML5 Banners</a>
