--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <p>Welcome to my simple portfolio website, made by me with simple HTML5, CSS, Javascript (no framework).
       </p>
       <p>Here are some of the projects I have worked on:</p>
-      <a href="./ads/ads.html" class="adsBtn btnHover">HTML5 Banners</a>
+      <div class="linksContainer">
+        <a href="./ads/ads.html" class="adsBtn btnHover">HTML5 Banners</a>
+        <a href="./websites.html" class="adsBtn btnHover">Websites</a>
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
