Change Play to Start

--- a/ads/ads.html
+++ b/ads/ads.html
@@ -37,17 +37,17 @@
           <div class="ad ad1" data-ad="ad1_120x600">
             <img src="./adFiles/ad1_120x600/images/backup.jpg" alt="ad1_120x600_backupImg">
             <iframe src="" frameborder="0" width="120" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_120x600">
             <img src="./adFiles/ad2_120x600/images/backup.jpg" alt="ad2_120x600_backupImg">
             <iframe src="" frameborder="0" width="120" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_120x600">
             <img src="./adFiles/ad3_120x600/images/backup.jpg" alt="ad3_120x600_backupImg">
             <iframe src="" frameborder="0" width="120" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
@@ -56,17 +56,17 @@
           <div class="ad ad1" data-ad="ad1_160x600">
             <img src="./adFiles/ad1_160x600/images/backup.jpg" alt="ad1_160x600_backupImg">
             <iframe src="" frameborder="0" width="160" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_160x600">
             <img src="./adFiles/ad2_160x600/images/backup.jpg" alt="ad2_160x600_backupImg">
             <iframe src="" frameborder="0" width="160" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_160x600">
             <img src="./adFiles/ad3_160x600/images/backup.jpg" alt="ad3_160x600_backupImg">
             <iframe src="" frameborder="0" width="160" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
@@ -75,17 +75,17 @@
           <div class="ad ad1" data-ad="ad1_200x625">
             <img src="./adFiles/ad1_200x625/images/backup.jpg" alt="ad1_200x625_backupImg">
             <iframe src="" frameborder="0" width="200" height="625"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_200x625">
             <img src="./adFiles/ad2_200x625/images/backup.jpg" alt="ad2_200x625_backupImg">
             <iframe src="" frameborder="0" width="200" height="625"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_200x625">
             <img src="./adFiles/ad3_200x625/images/backup.jpg" alt="ad3_200x625_backupImg">
             <iframe src="" frameborder="0" width="200" height="625"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
@@ -94,17 +94,17 @@
           <div class="ad ad1" data-ad="ad1_300x250">
             <img src="./adFiles/ad1_300x250/images/backup.jpg" alt="ad1_300x250_backupImg">
             <iframe src="" frameborder="0" width="300" height="250"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_300x250">
             <img src="./adFiles/ad2_300x250/images/backup.jpg" alt="ad2_300x250_backupImg">
             <iframe src="" frameborder="0" width="300" height="250"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_300x250">
             <img src="./adFiles/ad3_300x250/images/backup.jpg" alt="ad3_300x250_backupImg">
             <iframe src="" frameborder="0" width="300" height="250"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
@@ -113,17 +113,17 @@
           <div class="ad ad1" data-ad="ad1_300x600">
             <img src="./adFiles/ad1_300x600/images/backup.jpg" alt="ad1_300x600_backupImg">
             <iframe src="" frameborder="0" width="300" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_300x600">
             <img src="./adFiles/ad2_300x600/images/backup.jpg" alt="ad2_300x600_backupImg">
             <iframe src="" frameborder="0" width="300" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_300x600">
             <img src="./adFiles/ad3_300x600/images/backup.jpg" alt="ad3_300x600_backupImg">
             <iframe src="" frameborder="0" width="300" height="600"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
@@ -132,17 +132,17 @@
           <div class="ad ad1" data-ad="ad1_320x50">
             <img src="./adFiles/ad1_320x50/images/backup.jpg" alt="ad1_320x50_backupImg">
             <iframe src="" frameborder="0" width="320" height="50"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_320x50">
             <img src="./adFiles/ad2_320x50/images/backup.jpg" alt="ad2_320x50_backupImg">
             <iframe src="" frameborder="0" width="320" height="50"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_320x50">
             <img src="./adFiles/ad3_320x50/images/backup.jpg" alt="ad3_320x50_backupImg">
             <iframe src="" frameborder="0" width="320" height="50"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
@@ -151,17 +151,17 @@
           <div class="ad ad1" data-ad="ad1_728x90">
             <img src="./adFiles/ad1_728x90/images/backup.jpg" alt="ad1_728x90_backupImg">
             <iframe src="" frameborder="0" width="728" height="90"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_728x90">
             <img src="./adFiles/ad2_728x90/images/backup.jpg" alt="ad2_728x90_backupImg">
             <iframe src="" frameborder="0" width="728" height="90"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_728x90">
             <img src="./adFiles/ad3_728x90/images/backup.jpg" alt="ad3_728x90_backupImg">
             <iframe src="" frameborder="0" width="728" height="90"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
@@ -170,17 +170,17 @@
           <div class="ad ad1" data-ad="ad1_970x90">
             <img src="./adFiles/ad1_970x90/images/backup.jpg" alt="ad1_970x90_backupImg">
             <iframe src="" frameborder="0" width="970" height="90"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad2" data-ad="ad2_970x90">
             <img src="./adFiles/ad2_970x90/images/backup.jpg" alt="ad2_970x90_backupImg">
             <iframe src="" frameborder="0" width="970" height="90"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <div class="ad ad3" data-ad="ad3_970x90">
             <img src="./adFiles/ad3_970x90/images/backup.jpg" alt="ad3_970x90_backupImg">
             <iframe src="" frameborder="0" width="970" height="90"></iframe>
-            <button class="playBtn btnHover">Play</button>
+            <button class="playBtn btnHover">Start</button>
           </div>
           <p class="responsiveMsg">Window it's not wide enough to show</p>
         </div>
