--- a/websites.html
+++ b/websites.html
@@ -24,7 +24,7 @@
             <li>Node.js</li>
             <li>Express.js</li>
             <li>Mongoose.js</li>
-            <li>AWS (EC2)</li>
+            <li>AWS</li>
           </ul>
         </div>
       </a>
