update website copy

--- a/websites.html
+++ b/websites.html
@@ -15,7 +15,7 @@
     <div class="websitesCont">
       <a href="https://isenliu-reactpractice.netlify.app/" target="_blank" rel="noopener noreferrer external" class="links">
         <h2>BLOG TEST</h2>
-        <p>Website to practice React.js</p>
+        <p>Website with basic CRUD operations to practice React.js </p>
         <div class="tags">
           <ul>
             <li>React</li>
